homelab/k8s/rook/cluster/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
#  annotations:
#    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
spec:
  ingressClassName: nginx
  rules:
    - host: "ceph-dashboard.k8s"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: http-dashboard
